# DroneControlSystem

./: .gdbinit  .gitignore  CMakeLists.txt  README.md  REDIS USAGES  Relazione.md  TODO  dump.rdb  lall.sh  launch_client.sh  launch_server.sh  ls.sh  redis.conf  run.sh
Monitors/: Monitor.hpp  Monitor.py  RechargeTime.py  Utils.py  ZoneAndAreaCoverage.py
database/: Database old.h  Database.cpp  Database.h
res/: Relazione.md  [main] Main executing function.txt  class ChargeBase.txt
res/doc/: Database schemas used.txt  RedisUsed.txt  Relazione.md  class Database.txt  class ScannerManager.txt  class TestGenerator.txt
res/doc/txt/: Database schemas used.txt  [main] Main executing function.txt  class Database.txt  class Drone.txt  class DroneControl.txt  class Monitors.txt  class TestGenerator.txt  class Wave.txt  main.txt
sh/: conf.sh  log_manage.sh  strings.sh  syst_manage.sh  utils.sh
src/: Drone.cpp  Drone.h  DroneControl.cpp  DroneControl.h  db_config.json  globals.cpp  globals.h  main.cpp  main_system.cpp
src/ChargeBase/: ChargeBase.cpp  ChargeBase.h  main_chargebase.cpp
src/Database/: Buffer.cpp  Buffer.h  Database.cpp  Database.h  NewBuffer.cpp  NewBuffer.h
src/Drone/: ChargeBase.cpp  ChargeBase.h  Drone.cpp  Drone.h  DroneManager.cpp  DroneManager.h  DroneZone.cpp  DroneZone.h  drone.cpp
src/DroneControl/: DroneControl.cpp  DroneControl.h  SyncedDroneControl.cpp  SyncedDroneControl.h  main_dronecontrol.cpp
src/GUI/: DroneDraw.cpp  Drone_ui.cpp  Drone_ui.h  MovingPoint.cpp  MovingPoint.h  UI.cpp  UI.h
src/Monitor/: Monitor.cpp  Monitor.h
src/Monitors/: AreaCoverage.cpp  AreaCoverageMonitor.cpp  CoverageMonitor.cpp  DroneChargeMonitor.cpp  Monitor.cpp  Monitor.h  Monitor.py  RechargeTimeMonitor.cpp  SystemPerformanceMonitor.cpp  TimeToReadDataMonitor.cpp  WaveCoverageMonitor.cpp  ZoneCoverageMonitor.cpp
src/Scanner/: Drone.cpp  Drone.h  DroneState.cpp  DroneState.h  ScannerManager.cpp  ScannerManager.h  SyncedScannerManager.cpp  SyncedScannerManager.h  ThreadUtils.cpp  ThreadUtils.h  Wave.cpp  Wave.h  main_scanner.cpp
src/TestGenerator/: TestGenerator.cpp  TestGenerator.h
src/db/: Buffer.cpp  Buffer.h  Database.cpp  Database.h
utils/: LogUtils.cpp  LogUtils.h  RedisUtils.cpp  RedisUtils.h  utils.cpp  utils.h
